// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleIcon /> matches snapshot when closed 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-chevron-down fa-rotate-180 "
    data-icon="chevron-down"
    data-prefix="fas"
    focusable="false"
    role="img"
    style="transition: transform 0.25s ease-in-out;"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;

exports[`<ToggleIcon /> matches snapshot when open 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-chevron-down "
    data-icon="chevron-down"
    data-prefix="fas"
    focusable="false"
    role="img"
    style="transition: transform 0.25s ease-in-out;"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;
